--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -205,6 +205,7 @@ body.plantshare {
     &#profile {
         .info-section, .location-section {
             min-height: 140px;
+            position: relative;
             .info.box {
                 min-height: 160px;
                 padding: 0 0 5px 0;
@@ -264,6 +265,68 @@ body.plantshare {
                         display: none;
                     }
                 }
+            }
+            .image-modal {
+                background-color: white;
+                border: 5px solid #ACAC90;
+                display: none;
+                padding: 15px;
+                position: absolute;
+                width: 400px;
+                height: 120px;
+                top: 35px;
+                left: 20px;
+                z-index: 10;
+
+                img {
+                    float: left;
+                    margin: 0 20px 10px 0;
+                }
+
+                a.close {
+                    background: transparent url(/static/images/icons/close.png) no-repeat;
+                    display: block;
+                    height: 16px;
+                    position: absolute;
+                    top: 15px;
+                    right: 15px;
+                    width: 16px;
+                    text-indent: -9999px;
+                }
+
+                h4 {
+                    margin: 0 0 15px;
+                    font-size: 18px;
+                }
+
+                form {
+                    float: right;
+                    margin: 15px 0;
+                    width: 290px;
+                }
+                
+                input {
+                    border: 0 none !important;
+                    box-shadow: inset 0 0 0 white !important;
+                }
+
+                input#id_image {
+                    clear: both;
+                    display: block;
+                    margin: 0 0 10px;
+                }
+
+                .save-btn {
+                    background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -272px -231px;
+                    width: 99px !important;
+                    height: 32px;
+                    font-size: 0;
+                    -moz-box-shadow: 0 !important;
+                    border: 0 none !important;
+                    display: block;
+                    text-indent: -9999px;
+                }
+
             }
         }
     }
