--- a/gobotany/site/templates/gobotany/maps_test.html
+++ b/gobotany/site/templates/gobotany/maps_test.html
@@ -29,7 +29,7 @@
 
         <h2>Google static location map</h2>
 
-        {% include "_location_map.html" with location="Framingham, MA" height="150" width="302" zoom="7" id="id_location_map" %}
+        {% include "_location_map.html" with location="Framingham, MA" height_px="150" width_px="302" zoom="7" id="id_location_map" %}
 
         <h2>Google maps (using JavaScript API)</h2>
 
@@ -38,13 +38,18 @@
         <div id="map-new-england" style="width: 360px; height: 480px"
             class="location-map"></div>
 
+        {# New England map centered on Rumford, NH via template tag #}
+        {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" height="480px" width="360px" zoom="6" id="new-england-map" %}
+
         <h3>Sightings map (mini) for PlantShare main page</h3>
 
-        TODO
+        {# Sightings map (mini) via template tag #}
+        {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" height="297px" width="479px" zoom="6" id="mini-sightings-map" %}
 
         <h3>Sightings map for Sightings Locator page</h3>
 
-        TODO
+        {# Sightings map via template tag #}
+        {% include "_sightings_map.html" with latitude="44.53599" longitude="-70.56609" height="524px" width="710px" zoom="6" id="sightings-map" %}
 
     </body>
 </html>
