Show D. Key details at bottom of species page from Simple/Full keys.
This is commented out for now until the release of the D. Key. It is
a first step toward making the D. Key content searchable. Also make
the type size and spacig consistent with the page. (#195)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -63,7 +63,7 @@
                 {% endif %}
 
                 {% if key == 'dichotomous' %}
-                    <div class="dkey_text">
+                    <div>
                         {% include "dkey/_page_text.html" with page=dkey_page %}
                     </div>
                 {% endif %}
@@ -227,6 +227,19 @@
                     </tbody>
                 </table>
                 </div>
+
+                {% comment %}
+                When viewed from places other than the D. Key, display the
+                D. Key information at the bottom of the page.
+                NOTE: This is to stay commented out until the release of
+                the Dichotomous Key.
+                {% ifnotequal key 'dichotomous' %}
+                    <h3 id="dkey">Dichotomous Key Details</h3>
+                    <div>
+                        {% include "dkey/_page_text.html" with page=dkey_page %}
+                    </div>
+                {% endifnotequal %}
+                {% endcomment %}
 
             </div>
 
