--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -1766,6 +1766,7 @@ ul.full-description > li h5, ul.full-description > li div {
 #taxon table {
     border-collapse: collapse;
     font-size: 12px;
+    margin-bottom: 14px;
     margin-top: 8px;
     width: 690px;
 }
