Fix tab order imposed by recaptcha on the Sign Up form.
Before, the tab order on the Sign Up form was suboptimal, with the
Sign Me Up button taking three more tab presses to get focus after
the user entered the captcha, and it was not even obvious that
this was possible given three extra tab presses needed. Set the
tab order dynamically and the focus to the first field, so users
can sign up more quickly and easily.

--- a/gobotany/plantshare/templates/registration/registration_form.html
+++ b/gobotany/plantshare/templates/registration/registration_form.html
@@ -4,6 +4,10 @@
 
 {% block body_attributes %}id="sign-up" class="plantshare"{% endblock %}
 
+{% block js_require %}
+    require(['plantshare/sign_up']);
+{% endblock %}
+
 {% block main_content %}
 <h1>Sign Up for PlantShare</h1>
 
@@ -17,7 +21,8 @@ with a link to activate your account.</p>
 <form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="button" value="Sign Me Up" />
+    <input type="submit" class="button" value="Sign Me Up"
+        id="sign_up_button">
 </form>
 
 {% endblock %}
