Start 'taxa' app and move the family page into it.
This is part of the ongoing work to move things out of the simplekey app
that do not pertain to just the Simple Key or Full Key. The taxa app
will hold the species, genus, and family pages. (#214)

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -52,7 +52,7 @@
 {% if title == 'Key to the Families' %}
   <h1>Dichotomous Key to Families</h1>
 {% elif page.rank == 'family' %}
-  <h1><a href="{% url simplekey-family page.title|lastword|slugify %}"
+  <h1><a href="{% url taxa-family page.title|lastword|slugify %}"
          >{{ title }}</a></h1>
 {% elif page.rank == 'genus' %}
   <h1><a href="{% url simplekey-genus page.title|slugify %}"
