--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -331,7 +331,7 @@
 
                 <div class="section">
                     <h5>Family:</h5>
-                    <p><a href="{% url simplekey-family taxon.family.slug %}"
+                    <p><a href="{% url taxa-family taxon.family.slug %}"
                         >{{ taxon.family }}</a></p>
                 </div>
 
