Move the genus page into the taxa app. (#214)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -337,7 +337,7 @@
 
                 <div class="section">
                     <h5>Genus:</h5>
-                    <p><em><a href="{% url simplekey-genus taxon.genus.slug %}"
+                    <p><em><a href="{% url taxa-genus taxon.genus.slug %}"
                         >{{ taxon.genus }}</a></em></p>
                 </div>
 
