--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -55,7 +55,7 @@
   <h1><a href="{% url taxa-family page.title|lastword|slugify %}"
          >{{ title }}</a></h1>
 {% elif page.rank == 'genus' %}
-  <h1><a href="{% url simplekey-genus page.title|slugify %}"
+  <h1><a href="{% url taxa-genus page.title|slugify %}"
          ><i>{{ title }}</i></a></h1>
 {% else %}
   <h1>{{ title }}</h1>
