--- a/gobotany/taxa/templates/gobotany/genus.html
+++ b/gobotany/taxa/templates/gobotany/genus.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/_new_base.html" %}
+{% extends "gobotany/_page_full_sidebar.html" %}
 {% load simplekey_extras %}
 
 {% block title %}
@@ -23,15 +23,10 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
     });
 {% endblock %}
 
-{% block body_attributes %}id="genus" class="app genus"{% endblock %}
+{% block body_attributes %}id="genus" class="taxa"{% endblock %}
 
-{% block body_content %}
-    {% include "simplekey/_header.html" %}
-
-    <div class="content">
-        <div class="container">
-            <div id="main">
-                <h2>Genus: <i>{{ genus.name }}</i></h2>
+{% block main_content %}
+                <h1>Genus: <i>{{ genus.name }}</i></h1>
                 {% if common_name %}
                     <h3>{{ common_name|cut:"The "|lower }}</h3>
                 {% endif %}
@@ -71,12 +66,8 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                     >{{ species.scientific_name }}</a></i></li>
                 {% endfor %}
                 </ul>
+{% endblock %}
 
-            </div>
-            <div id="sidebar" style="height: 634px;">
-                {% include "simplekey/_sidebar_items.html" %}
-            </div>
-            <div class="clearit"></div>
-        </div>
-    </div>
+{% block sidebar_content %}
+    {% include "simplekey/_sidebar_items.html" %}
 {% endblock %}
