Add caption to figure-number tooltip #282

--- a/gobotany/dkey/templates/dkey/figure_mention.html
+++ b/gobotany/dkey/templates/dkey/figure_mention.html
@@ -1,4 +1,5 @@
 {% load dkey_filters %}
 [Fig{% if figures|length > 1 %}s{% endif %}. {% for figure in figures %}<a
-class="figure-link" href="{{ figure|figure_url }}">{{ figure.number }}</a
+class="figure-link" href="{{ figure|figure_url }}"
+data-caption="{{ figure.caption }}">{{ figure.number }}</a
 >{% if forloop.last %}]{% else %},{% endif %}{% endfor %}
