--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -94,5 +94,236 @@ body.taxa {
             width: 280px;
         }
     }
+    #species {
+        h1 span.origin {
+	        font-size: 14px;
+            line-height: 100%;
+        }
+        h3 {
+            color: #807121;
+            font-size: 30px;
+            margin-bottom: 12px;
+        }
+        #sb-player.html {
+            background: #fff;
+            overflow: hidden;  /* Get rid of vertical scrollbar in WebKit on
+                                  enlarged North America distribution map. */
+            padding: 0 5px 5px;
+        }
+        #main p {
+            margin: 0 0 15px;
+        }
+        .note {
+            background: #c4bd93;
+            border-bottom: 1px solid #ad9f50;
+            border-top: 1px solid #ad9f50;
+            color: #000;
+            font-family: $headings-font;
+            font-size: 24px;
+            margin-bottom: 0.5em;
+            padding: 0.5em 0;
+            text-align: center;
+            width: 100%;
+        }
+        a.description-control {
+            background: url(/static/images/icons/plus.png) left 50% no-repeat;
+            display: block;
+            margin: 10px 0 12px 0;
+            padding: 3px 0 3px 25px;
+        }
+        ul.full-description {
+            background: #fbfbf8;	
+            border: 1px solid #e1e1dc;	
+            display: none;
+            margin: 0 0 15px 0;
+            > li {
+                border-bottom: 1px solid #e1e1dc;
+                clear: left;
+                display: block;
+                padding: 18px;
+                margin: 0 0 0 0;
+                &:last-child {
+	                border-bottom: none;	
+                }
+                &:hover {
+                    background-color: #fff;
+                }
+                h5 {
+                	background: url(/static/images/icons/plus.png) left 50% no-repeat;
+                    cursor: pointer;
+                    padding-left: 28px;
+                    
+                }
+                div {
+                    display: none;
+                    padding-left: 28px;
+                }
 
+            }
+        }
+        table {
+            border-collapse: collapse;
+            font-size: 12px;
+            margin-bottom: 14px;
+            margin-top: 8px;
+            width: 690px;
+            th, td {
+                line-height: 105%;
+                padding: 6px 4px;
+            }
+            th {
+
+                background: #b4d57f;
+                font-weight: normal;
+                text-transform: uppercase;
+            }
+            td {
+                border: 1px solid #c3d941;
+                border-bottom: 0px;
+                border-top: 0px;
+                text-align: center;
+            }
+            thead {
+                th {
+                    border: 1px solid #c3d941;
+                    border-right: 1px solid #b4d57f;
+                    font-size: 10px;
+                    text-align: center;
+                    vertical-align: bottom;
+                    &:last-child {
+                        border-right-color: #c3d941;
+                    }
+                }
+            }
+            tbody th, thead td {
+                background: inherit;
+                border: 0;
+                font-size: 10px;
+                font-weight: bold;
+                padding-right: 8px;
+                text-align: right;
+                width: 103px;
+            }
+            tbody {
+                th {
+                    padding-left: 0;
+                    white-space: nowrap;
+                    &.status {
+                        font-size: 12px;
+                        font-weight: normal;
+                        padding-left: 40px;
+                        text-align: left;
+                        text-transform: none;
+                    }
+                }
+            }
+        }
+        #sidebar {
+            dt, dd {
+                display: inline;
+            }
+            .lookalikes dt {
+                margin-top: 1em;
+                display: block;
+            }
+            .get-help-btn {
+                margin: 0 0 0 10px;
+            }
+        }
+        a.enlarge {
+	        color: #1a2e11;
+	        display: block;
+            margin: 0 0 8px 0;
+            &:hover {
+	            text-decoration: none;
+            }
+            img {
+                vertical-align: middle;
+            }
+        }
+        div.section {
+            &.map p {
+                font-size: 9px;
+                margin-bottom: 6px;
+            }
+            &.namap {
+                position: relative;
+                div.trans {
+                    /* Transparent div to make North America map object
+                     * element clickable */
+                    cursor: pointer;
+                    background: transparent;
+                    height: 133px; /* Cover the map plus the link below it */
+                    margin-bottom: 0;
+                    padding: 0;
+                    position: absolute;
+                    top: 45px;
+                    width: 196px;
+                }
+            }
+        }
+        /* Larger gallery styles */
+        .img-gallery {
+   	        float: none;
+	        margin: 0 0 0 0;
+	        width: 710px;
+            .img-container {
+	            height: 273px;
+	            width: 710px;
+            }
+            .frame {
+	            height: 239px;	
+	            width: 700px;
+            }
+            .images {
+                .single-img {
+	                float: left;
+	                position: relative;
+                }
+                img {
+	                float: none;	
+                }
+            }
+            p.caption {
+              	bottom: -22px;
+            	margin: 0 0 0 0;
+	            position: absolute;
+            	right: 0;
+            }
+        }
+        .controls {
+	        position: relative;
+            span {
+	            position: relative;
+	            top: -22px;	
+            }
+        }
+        a.more {
+            cursor: pointer;
+        }
+        /* TODO: resolve the two following sections */
+        #species-images {
+            border: 5px solid rgba(255, 255, 255, 0.8);
+            position: absolute;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+            -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+            -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+        }
+        /* Smooth Div Scroll image area */
+        #species-images {
+            height: 239px;
+            margin: 0 0 20px 0;
+            overflow: hidden;
+            position: relative;
+            width: 700px;
+            div.scrollableArea a {
+                border-right: 5px solid #fff;
+                float: left;
+                margin: 0;
+                padding: 0;
+            }
+        }
+    }
 }
